--- a/view/kit.html
+++ b/view/kit.html
@@ -1,15 +1,34 @@
+<div class="page-header">
+    <h1>{{kit.name}}</h1>
+</div>
+
+<input type="text" class="form-control" placeholder="Szukaj..." ng-model="query.name">
 <table class="table table-striped table-hover">
     <thead>
     <tr>
+        <th></th>
         <th>Lp.</th>
         <th>Nazwa</th>
         <th>Ilość</th>
+        <th></th>
+        <th></th>
     </tr>
     </thead>
-    <tr ng-repeat='item in items | orderBy:"name"' ng-class="{warning: item.warning, danger: item.danger} ">
-        <td>{{$index + 1}}.</td>
+    <tr ng-repeat='item in kit.items | filter:query:strict | orderBy:"name"' ng-class="{danger: danger(item)} ">
+        <td class="shrink"><span ng-repeat="badge in item.badges" ng-class="badge | badges"></span></td>
+        <td class="shrink">{{$index + 1}}.</td>
         <td>{{item.name}}</td>
-        <td>{{item.amount}}</td>
-        <td><span ng-repeat="badge in item.badges" ng-class="badge | badges"></span></td>
+        <td class="shrink">{{item.amount + ' ' + item.amountType}}</td>
+        <td>
+            <div class="progress" ng-show="item.quantity">
+                <div class="progress-bar  progress-bar-success" role="progressbar" aria-valuenow="{{item.quantity}}"
+                     aria-valuemin="0" aria-valuemax="100" ng-style="{width: item.quantity + '%'}">
+                    {{item.quantity}}%
+                </div>
+            </div>
+        </td>
+        <td class="shrink">
+            <button class="btn btn-xs btn-success" ng-click="goToDetails(item.id)">Szczegóły</button>
+        </td>
     </tr>
 </table>
